GUI/result pages - fix CSS for buttons on small screens

--- a/modules/gui/app/assets/stylesheets/apps/_result.less
+++ b/modules/gui/app/assets/stylesheets/apps/_result.less
@@ -36,6 +36,7 @@ div.dataTables_wrapper { clear: both; }
 #resultsTable_search,
 #resultsTable_customize {
     display: inline;
+    width: auto; // needed for small displays
 }
 
 #resultsTable_export,
